--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
+    "create-emotion-server": "^10.0.27",
     "express": "^4.17.1",
+    "preact": "^10.4.1",
     "razzle": "^3.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "theme-ui": "^0.3.1"
   }
 }
