--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-transform-react-jsx": "^7.9.4",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "create-emotion-server": "^10.0.27",
+    "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
     "preact": "^10.4.1",
     "razzle": "^3.1.1",
@@ -19,5 +20,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "theme-ui": "^0.3.1"
+  },
+  "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^10.0.27"
   }
 }
