--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "create-emotion-server": "^10.0.27",
     "express": "^4.17.1",
-    "preact": "^10.4.1",
+    "module-alias": "^2.2.2",
+    "preact": "10.4.6",
+    "preact-render-to-string": "^5.1.10",
     "razzle": "^3.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
