--- a/package.json
+++ b/package.json
@@ -10,16 +10,9 @@
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
-    "create-emotion-server": "^10.0.27",
     "express": "^4.17.1",
-    "module-alias": "^2.2.2",
     "preact": "10.4.6",
     "preact-render-to-string": "^5.1.10",
-    "razzle": "^3.1.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "theme-ui": "^0.3.1"
+    "razzle": "^3.1.1"
   }
 }
